# catalog-intelligence-pipeline

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
contracts/: pubsub_catalog_predictions.schema.json
contracts/bigquery/: catalog_predictions_bq_schema.json  catalog_predictions_ddl.sql
contracts/examples/: invalid_catalog_prediction_event.json  valid_catalog_prediction_event.json
data/: sample_inputs.json
docs/: architecture.md  cloud_run.md
infra/terraform/: README.md  main.tf  outputs.tf  variables.tf
scripts/: benchmark_api.py  benchmark_predict.py
src/catalog_intelligence_pipeline/: __init__.py  api.py  cli.py  config.py  contracts.py  demo_utils.py  enrich.py  flatten.py  fusion.py  ingest.py  pipeline.py  predict.py  rate_limiter.py  schemas.py  service_layer.py  timing.py
src/catalog_intelligence_pipeline/extractors/: __init__.py  dimensions.py  text_attributes.py  vision_attributes.py
src/catalog_intelligence_pipeline/gcp_seams/: __init__.py  publishers.py  warehouse.py
src/catalog_intelligence_pipeline/providers/: __init__.py  llm.py  vision.py
tests/: conftest.py  test_api.py  test_cli_demo.py  test_contracts.py  test_dimensions.py  test_enrich.py  test_flatten.py  test_fusion.py  test_ingest.py  test_pipeline.py  test_predict.py  test_publishers.py  test_service_layer_outputs.py  test_text_attributes.py  test_vision.py
